--- a/debian/control
+++ b/debian/control
@@ -18,4 +18,7 @@ Architecture: all
 Pre-Depends: dpkg (>= 1.15.6~)
 Depends: ${python:Depends}, ${misc:Depends}
 Description: resolve JSON pointers
- Python-json-pointer is a small library to resolve JSON pointers.
+ Python-json-pointer is a small library to resolve JSON pointers according to
+ the IETF draft specification. JSON Pointer defines a string syntax for
+ identifying a specific value within a JavaScript Object Notation (JSON)
+ document.
