--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -1,6 +1,6 @@
 [DEFAULT]
 upstream-branch = master
-debian-branch = debian/kilo
+debian-branch = debian/liberty
 upstream-tag = v%(version)s
 compression = xz
 
