--- a/debian/control
+++ b/debian/control
@@ -12,8 +12,8 @@ Build-Depends: debhelper (>= 9),
                python3-all,
                python3-setuptools,
 Standards-Version: 3.9.8
-Vcs-Browser: https://anonscm.debian.org/cgit/openstack/python-json-pointer.git/
-Vcs-Git: https://anonscm.debian.org/git/openstack/python-json-pointer.git
+Vcs-Browser: https://git.openstack.org/cgit/openstack/deb-python-json-pointer?h=debian%2Fnewton
+Vcs-Git: https://git.openstack.org/openstack/deb-python-json-pointer -b debian/newton
 Homepage: https://github.com/stefankoegl/python-json-pointer
 
 Package: python-json-pointer
